# mesh_renderer

./: .clangd  CMakeLists.txt  README.md  build.sh
include/: mesh.h  model.h  shader.h  transform.h  trivial_model.h  window.h
lib/: mesh.cpp  model.cpp  shader.cpp  transform.cpp  trivial_model.cpp  window.cpp
shader/: fragment.glsl  vertex.glsl
src/: main.cpp
